﻿3.5.0 [TBD]
[+] New method DateTimeUtils.Add . It allows add specific amount of period "DateTimePeriod" to date.
[*] DateTimeUtils.GetDiff now returns negative values.
[*] DateTimeUtils.GetRange now returns reverse collection if "from" date is greater than "to" date.

3.2.2 [2020-07-06]
[+] Add extension method ICollection<T>.Add that allows adding enumerable.
[*] InvalidOrderFieldException now returns all available fields to order by.
[*] Fix OrderMultiple call for queryables.

3.2.0 [2020-06-23]
[+] Add netstandard 2.1 support.
[+] The package is built with nullable reference type annotations.
[-] Remove AtomicUtils.SafeSwap .
[*] Use Count() call for enumerable ChunkSelectRange because it has much more effective implementation.
[+] Add constructor to DiffResult.
[*] CollectionUtils.OrderMultiple generates InvalidOrderFieldException instead of InvalidOperationException.
[*] CollectionUtils.OrderMultiple allows duplicating selector keys.
[*] Overall code clean up.
[*] Spelling fixes.
[*] Fix DiffResultUpdatedItems.GetHashCode .

3.1.1 [2019-12-28]
[*] OrderParsingDelegates.ParseSeparated returns empty collection if string is empty.
[*] CollectionUtils.OrderMultiple returns unsorted collection if orderEntries is empty.

3.1.0 [2019-12-03]
[*] Use DiffResultUpdatedItems{T} for Diff{T} instead of tuples.
[-] Remove CollectionUtils.OrderMultiple support for net40.
[*] Fix net40 support.
[+] Add deconstruct for Diff{T}.
[*] Fix pagination Empty result.

3.0.0 [2019-12-01]
[-] Drop support for net452 and net461.
[+] Add method to diff collections CollectionUtils.Diff and CollectionUtils.ApplyDiff .
[+] Add method to apply collection sorting with one call CollectionUtils.OrderMultiple .
[+] Make covariant IMetadataDto generic type parameters.
[+] Simplify metadata generation by introducing TotalCountListMetadataDto, OffsetLimitMetadataDto, PagedListMetadataDto.
[+] Add enum utils GetNamesWithDescriptions, GetValuesWithDescriptions.
[-] Remove string extensions methods.